# acionna0

./: .cproject  .project  CMakeLists.txt  README.md  monitor.html  notes.md  partition_nvs_dump.sh  partitions0.csv  partitions1.csv  sdkconfig  sdkconfig.old  sdkconfigq  sdkconfigs
components/basic_defines/: CMakeLists.txt
components/basic_defines/include/: hardware_defs.h
components/clock/: CMakeLists.txt  clockin.cpp  date_time.cpp  helper.cpp  ntp.cpp  readMe.md  rtc_time.orig.cpp  sys_time.cpp
components/clock/include/: clockin.hpp  date_time.hpp  days_of_week.h  helper.hpp  ntp.hpp  sntp_time.hpp  sys_time.hpp
components/connections/: CMakeLists.txt  Kconfig.projbuild  basic_defines_conn.hpp  bt_setup.cpp  bt_setup.hpp  httpd_setup.cpp  httpd_setup.hpp  httpd_ssl_setup.cpp  httpd_ssl_setup.hpp  wifi_setup.cpp  wifi_setup.hpp  ws_client_setup.cpp  ws_client_setup.hpp
components/connections/certs/: thmalmeida-selfsigned.crt  thmalmeida-selfsigned.key
components/dsp/: CMakeLists.txt  rms.cpp
components/dsp/include/: rms.hpp
components/eeprom/: CMakeLists.txt  eeprom.cpp
components/eeprom/include/: eeprom.hpp
components/helper/: CMakeLists.txt  convert_char_to_hex.c  delay.cpp  time_operations.cpp
components/helper/include/: convert_char_to_hex.h  datetime.h  delay.hpp  pinout.hpp  time_operations.hpp
components/math/: CMakeLists.txt
components/math/include/: dsp.hpp  e_sensor.hpp
components/modules/aht10/: CMakeLists.txt  aht10.cpp
components/modules/ahtx0/: CMakeLists.txt  ahtx0.cpp
components/modules/bmp180/: CMakeLists.txt  bmp180.cpp
components/modules/bmp280/: CMakeLists.txt  bmp280.cpp
components/modules/dht/: CMakeLists.txt  dht.cpp  dht_adaf.cpp  dht_adaf.h
components/modules/ds1307/: CMakeLists.txt  ds1307.cpp
components/modules/ds3231/: CMakeLists.txt  ds3231.cpp
components/modules/pcy8575/: CMakeLists.txt  pcy8575.cpp
components/modules/ssd1306/: CMakeLists.txt  ssd1306.cpp
components/modules/st7735/: CMakeLists.txt  st7735.cpp
components/ota/: CMakeLists.txt  Kconfig.projbuild  advanced_https_ota.cpp  https_ota.cpp  https_ota.hpp  native_ota.cpp  native_ota.hpp
components/ota/server_certs/: ca_cert.pem
components/peripherals/adc/: CMakeLists.txt  Readme.txt  adc.cpp  adc2.cpp  adc_driver.cpp  adc_old.cpp
components/peripherals/eeprom/: CMakeLists.txt  esp_eeprom.cpp
components/peripherals/gpio/: CMakeLists.txt  gpio.cpp  gpio_driver.cpp
components/peripherals/i2c/: i2c_driver.cpp  i2c_driver_with_slave.cpp  i2c_master.cpp
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp  setup.cpp  setup.hpp  wifi_setup0.c  wifi_setup0.h
main/acionna/: acionna.cpp  acionna.hpp  acionna_orig.cpp  bt_stuffs.cpp  bt_stuffs.hpp  helper.cpp  helper.hpp  https_ota.cpp  https_ota.hpp  pipepvc.cpp  pipepvc.hpp  pump.cpp  pump.hpp  pwm_ledc.cpp  pwm_ledc.hpp  valves.cpp  valves.hpp  well.cpp  well.hpp  wifi_setup.cpp  wifi_setup.hpp  ws_keep_alive.c  ws_setup.cpp  ws_setup.hpp
main/acionna/sensors/: sensor_power.cpp  sensor_power.hpp  sensor_pressure.cpp  sensor_pressure.hpp  sensor_temperature.cpp
main/acionna/sensors/include/: sensor_power.hpp  sensor_pressure.hpp
server_certs/: th_cert.crt
(+60 files in other folders)
